# project_template

./: .gitignore  CMakeLists.txt  README.md
include/: stopwatch.hpp
src/: main.cpp
tests/: tests.cpp
